Fix MapSyncBridge compatibility with Java 17 collections